tests/ui/diagnostic-width/whitespace-trimming-2.stderr
error[E0308]: mismatched types
  --> $DIR/whitespace-trimming-2.rs:4:187
   |
LL | ...-> usize {
   |       ----- expected `usize` because of return type
LL | ...                                                                                                                                                                                 ()
   |                                                                                                                                                                                     ^^ expected `usize`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
