tests/ui/diagnostic-width/whitespace-trimming-2.rs
// ignore-tidy-linelength

fn foo() -> usize {
                                                                                                                                                                                          ()
//~^ ERROR mismatched types
}

fn main() {}
